--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MuzammilKhan129.github.io/Tip-Counter",
+  "homepage": "https://MuzammilKhan129.github.io/Tip-Calculator",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
